Updated JS Code | Updated Dependencies

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,10 @@
 		<div class="logo flexContainer flexCol">
 
 			<div class="accent logoText flexContainer flexRow">
-				<i class="fa-solid fa-shield"></i>
-				<h1>PassForge</h1>
+				<a href="https://github.com/sandunwira/PassForge" target="_blank" class="accent logoText flexContainer flexRow">
+					<i class="fa-solid fa-shield"></i>
+					<h1>PassForge</h1>
+				</a>
 			</div>
 
 			<h2 class="logoSlogan light">Your Secure Password Generator</h2>
@@ -37,7 +39,7 @@
 						<div class="optionBox" id="strength1">
 							Normal
 						</div>
-						<div class="optionBox" id="strength2">
+						<div class="optionBox selected" id="strength2">
 							Strong
 						</div>
 					</span>
@@ -46,7 +48,7 @@
 				<div class="optionSection flexContainer flexCol w100">
 					<h1 class="regular w100">Include Symbols</h1>
 					<span class="w100 flexContainer">
-						<div class="optionBox" id="symbolsYes">
+						<div class="optionBox selected" id="symbolsYes">
 							Yes
 						</div>
 						<div class="optionBox" id="symbolsNo">
@@ -61,7 +63,7 @@
 						<div class="optionBox" id="length5">
 							5
 						</div>
-						<div class="optionBox" id="length10">
+						<div class="optionBox selected" id="length10">
 							10
 						</div>
 						<div class="optionBox" id="length15">
@@ -94,7 +96,7 @@
 			<div class="outputField flexContainer flexRow">
 
 				<div id="generatedPW" class="flexContainer h100">
-					kjslkhgkljdhkgfjhkj
+					PASSWORD
 				</div>
 				<button id="copyBtn" class="h100">
 					<i class="fa-solid fa-clone"></i>
