Finished The App

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
 			<div class="accent logoText flexContainer flexRow">
 				<a href="https://github.com/sandunwira/PassForge" target="_blank" class="accent logoText flexContainer flexRow">
-					<i class="fa-solid fa-shield"></i>
+					<i class="fa-solid fa-shield-halved"></i>
 					<h1>PassForge</h1>
 				</a>
 			</div>
