--- a/src/index.html
+++ b/src/index.html
@@ -98,11 +98,13 @@
 				<div id="generatedPW" class="flexContainer h100">
 					PASSWORD
 				</div>
-				<button id="copyBtn" class="h100">
+				<button id="copyBtn" class="h100" title="Copy Password">
 					<i class="fa-solid fa-clone"></i>
 				</button>
 
 			</div>
+
+			<p id="copyNote"><i class="fa-solid fa-check" style="color: #D54040;"></i> Password Copied</p>
 
 		</div>
 
