--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
 
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+	<link rel="preload" href="./assets/fonts/fredoka.ttf" as="font" crossorigin="anonymous">
+	<link rel="preload" href="./assets/fonts/koulen.ttf" as="font" crossorigin="anonymous">
+	<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="text/css" type="style">
 </head>
 
 <body>
